{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 37,
  "lineage": "57125dbe-4b69-75a8-6376-dcb8d004a8cf",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "stock_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0018b373aba829819",
            "arn": "arn:aws:ec2:us-east-1:628599309261:instance/i-018c3d8601b336806",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018c3d8601b336806",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Main",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ae0ce6c53ee9c90c"
              }
            ],
            "primary_network_interface_id": "eni-0ae0ce6c53ee9c90c",
            "private_dns": "ip-10-0-1-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.84",
            "public_dns": "ec2-3-91-228-129.compute-1.amazonaws.com",
            "public_ip": "3.91.228.129",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-076f03a26b424864a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075d1eee1e95d562d",
            "tags": {
              "Name": "WordPress EC2 Instance"
            },
            "tags_all": {
              "Name": "WordPress EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0246145ede08c7e95"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "i-018c3d8601b336806",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux_2023",
            "module.rds.aws_db_instance.stock_rds",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.rds_sg",
            "module.subnet_group.aws_db_subnet_group.stock_db_subnet_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:security-group/sg-0246145ede08c7e95",
            "description": "Security group for Stock EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0246145ede08c7e95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stock_ec2_sg",
            "name_prefix": "",
            "owner_id": "628599309261",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-076c32d654e4fb7a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "sg-0246145ede08c7e95",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:security-group/sg-0afa5b10940265887",
            "description": "Security group for Stock RDS instance",
            "egress": [],
            "id": "sg-0afa5b10940265887",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0246145ede08c7e95"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "stock_rds_sg",
            "name_prefix": "",
            "owner_id": "628599309261",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-076c32d654e4fb7a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "sg-0afa5b10940265887",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stock_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:internet-gateway/igw-07a44cea413f98d53",
            "id": "igw-07a44cea413f98d53",
            "owner_id": "628599309261",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock Internet Gateway"
            },
            "tags_all": {
              "Name": "Stock Internet Gateway"
            },
            "vpc_id": "vpc-076c32d654e4fb7a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:route-table/rtb-0acc0786e151eb59a",
            "id": "rtb-0acc0786e151eb59a",
            "owner_id": "628599309261",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a44cea413f98d53",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Stock Public Route Table"
            },
            "tags_all": {
              "Name": "Stock Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-076c32d654e4fb7a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "rtb-0acc0786e151eb59a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.stock_igw",
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5a934c8f21f2970",
            "region": "us-east-1",
            "route_table_id": "rtb-0acc0786e151eb59a",
            "subnet_id": "subnet-075d1eee1e95d562d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.stock_igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:subnet/subnet-05e7f4d0155f9b92b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e7f4d0155f9b92b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "628599309261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock Private Subnet"
            },
            "tags_all": {
              "Name": "Stock Private Subnet"
            },
            "vpc_id": "vpc-076c32d654e4fb7a5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "subnet-05e7f4d0155f9b92b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:subnet/subnet-075d1eee1e95d562d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075d1eee1e95d562d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628599309261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock Public Subnet"
            },
            "tags_all": {
              "Name": "Stock Public Subnet"
            },
            "vpc_id": "vpc-076c32d654e4fb7a5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "628599309261",
            "id": "subnet-075d1eee1e95d562d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stock_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628599309261:vpc/vpc-076c32d654e4fb7a5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098efd6bd2b79e801",
            "default_route_table_id": "rtb-0588ab21abf5aad8d",
            "default_security_group_id": "sg-0d2c24b92f94939b3",
            "dhcp_options_id": "dopt-cfda63b5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076c32d654e4fb7a5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0588ab21abf5aad8d",
            "owner_id": "628599309261",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock VPC"
            },
            "tags_all": {
              "Name": "Stock VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}